@@ -155,12 +155,6 @@ assetstore.dir = /dspace/assetstore
 # Directory for history serializations
 history.dir = /dspace/history
 
-# Where to put search index files
-search.dir = /dspace/search
-# Higher values of search.max-clauses will enable prefix searches to work on large 
-# repositories
-#search.max-clauses=2048
-
 # Where to put the logs
 log.dir = /dspace/log
 
@@ -170,6 +164,24 @@ upload.temp.dir = /dspace/upload
 # Maximum size of uploaded files in bytes, must be positive
 # 512Mb
 upload.max = 536870912
+
+
+##### Search settings #####
+
+# Where to put search index files
+search.dir = /dspace/search
+
+# Higher values of search.max-clauses will enable prefix searches to work on
+# large repositories
+# search.max-clauses = 2048
+
+# Which Lucene Analyzer implementation to use.  If this is omitted or
+# commented out, the standard DSpace analyzer (designed for English)
+# is used by default.
+# search.analyzer = org.dspace.search.DSAnalyzer
+
+# Chinese analyzer
+# search.analyzer = org.apache.lucene.analysis.cn.ChineseAnalyzer
 
 
 ###### Statistical Report Configuration Settings ######
