@@ -74,6 +74,7 @@
           <LI><A HREF="configure.html#statistics">Configuring System Statistical Reports</A></LI>
           <LI><A HREF="configure.html#webuithumbs">Displaying Image Thumbnails</A></LI>
           <LI><A HREF="configure.html#strengths">Displaying Community and Collection Item Counts</A></LI>
+          <LI><A HREF="configure.html#luceneanalyzer">Lucene Analyzer</A></LI>
 		  <li><a href="configure.html#formathelp">On-line Help About File Formats</a></li>
 		  <li><a href="configure.html#viewlicence">View Item Licence</a></li>
         </UL>
